--- a/YingCaiAi/YingCaiAiWin/Views/login.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/login.xaml
@@ -1,6 +1,6 @@
 ﻿
     <ui:FluentWindow 
-    x:Class="YingCaiAiWin.Views.login"
+    x:Class="YingCaiAiWin.Views.Login"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -123,7 +123,7 @@
                             <ui:ToggleSwitch Grid.Column="0" Content="记住密码" VerticalAlignment="Center" 
                                         Margin="0,0,0,0" FontSize="13"/>
 
-                            <ui:HyperlinkButton Grid.Column="1" Name="忘记密码?" 
+                            <ui:HyperlinkButton Grid.Column="1"  
                                      VerticalAlignment="Center" Click="ForgotPassword_Click"
                                      Foreground="{StaticResource HeaderGradient}"/>
                         </Grid>
