--- a/YingCaiAi/YingCaiAiWin/App.xaml
+++ b/YingCaiAi/YingCaiAiWin/App.xaml
@@ -2,17 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YingCaiAiWin"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             xml:lang="utf-8"
-          DispatcherUnhandledException="OnDispatcherUnhandledException"
-   Exit="OnExit"
-   Startup="OnStartup">
+             StartupUri="Views/Login.xaml"> <!-- 修改此处路径 -->
+    
     <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ui:ThemesDictionary Theme="Light" />
-                <ui:ControlsDictionary />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        <!-- 保留原有资源 -->
     </Application.Resources>
 </Application>
