--- a/YingCaiAi/YingCaiAiWin/App.xaml
+++ b/YingCaiAi/YingCaiAiWin/App.xaml
@@ -2,9 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YingCaiAiWin"
-             StartupUri="Views/Login.xaml"> <!-- 修改此处路径 -->
-    
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xml:lang="utf-8"
+          DispatcherUnhandledException="OnDispatcherUnhandledException"
+   Exit="OnExit"
+   Startup="OnStartup">
     <Application.Resources>
-        <!-- 保留原有资源 -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemesDictionary Theme="Light" />
+                <ui:ControlsDictionary />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
