--- a/YingCaiAi/YingCaiAiWin/Views/Pages/AIWindows.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/AIWindows.xaml
@@ -1,4 +1,4 @@
-﻿ <ui:FluentWindow
+﻿<Page
     x:Class="YingCaiAiWin.Views.Pages.AIWindows"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,13 +7,16 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:local="clr-namespace:YingCaiAiWin.Views.Pages"
     mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance local:AIWindows,
+                                     IsDesignTimeCreatable=False}"
+     d:DesignHeight="650"
+        d:DesignWidth="1000"
     Title="客户服务系统" 
-    Height="800" 
-    Width="1200"
-    WindowStartupLocation="CenterScreen"
+  >
+    <!--WindowStartupLocation="CenterScreen"
     ExtendsContentIntoTitleBar="True"
     WindowCornerPreference="Round"
-    WindowBackdropType="Mica">
+    WindowBackdropType="Mica"-->
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -66,7 +69,7 @@
 
             <!-- 浏览器内容 -->
             <Border Grid.Row="1" CornerRadius="8" Margin="10,0,10,10" ClipToBounds="True">
-                <WebBrowser x:Name="EmbeddedBrowser" Navigated="EmbeddedBrowser_Navigated"/>
+                <WebBrowser x:Name="EmbeddedBrowser" Navigated="EmbeddedBrowser_Navigated" LoadCompleted="WebBrowser_LoadCompleted" />
             </Border>
 
             <!-- 全屏和最小化控制按钮 -->
@@ -242,4 +245,4 @@
             </ui:Card>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Page>
