--- a/YingCaiAi/YingCaiAiWin/Views/Pages/Customers.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/Customers.xaml
@@ -1,6 +1,6 @@
 ﻿
 <Page
-    x:Class="YingCaiAiWin.Views.Pages.KnowledgeBase"
+    x:Class="YingCaiAiWin.Views.Pages.Customers"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,8 +9,8 @@
     xmlns:hc="https://handyorg.github.io/handycontrol"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     mc:Ignorable="d"
-    Title="知识库管理"
-    d:DataContext="{d:DesignInstance local:KnowledgeBase,                     IsDesignTimeCreatable=False}"
+    Title="客户管理"
+    d:DataContext="{d:DesignInstance local:Customers,                     IsDesignTimeCreatable=False}"
     d:DesignHeight="650"
         d:DesignWidth="1000"
     
@@ -43,7 +43,7 @@
                     Margin="0,0,12,0"
                     Width="250"
                     Height="40"
-                     Text="{Binding ViewModel.Documents.Filename }"
+                     Text="{Binding ViewModel.CustomerSer.Name }"
                     />
 
                 <hc:ComboBox
@@ -52,14 +52,14 @@
                     hc:InfoElement.Placeholder="选择状态"
                     Width="170"
                     Margin="0,0,20,0"
-                    SelectedIndex="{Binding ViewModel.Documents.Status}"
+                    SelectedIndex="{Binding ViewModel.CustomerSer.Status}"
                     >
-                    <ComboBoxItem Content="全部" IsSelected="True" />
-                    <ComboBoxItem Content="未审核" />
-                    <ComboBoxItem Content="已审核" />
-                    <ComboBoxItem Content="已入库" />
+                    <ComboBoxItem Content="全部" />
+                    <ComboBoxItem Content="未联系" />
+                    <ComboBoxItem Content="已联系" />
+                    <ComboBoxItem Content="联系不上" />
                 </hc:ComboBox>
-                
+
                 <Button 
                     Grid.Column="3" 
                     Content="搜索" 
@@ -70,22 +70,14 @@
                     Margin="10,0,20,0"
                     Command="{Binding ViewModel.SerachCommand, Mode=OneWay}"
                     CommandParameter="DialogsAndFlyouts" />
-                <Button 
-                  Grid.Column="4" 
-                  Content="上传文件" 
-                  Width="100"
-                   Height="40"
-                  Style="{StaticResource ButtonPrimary}"
-                  hc:IconElement.Width="16"
-                  Margin="10,0,12,0"
-                  Command="{Binding ViewModel.OpenFileCommand}" />
+         
 
             </Grid>
 
             <!-- 数据表格 -->
             <hc:Card Grid.Row="2" Margin="0" Padding="0" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}" Effect="{StaticResource EffectShadow1}">
-                
-                <DataGrid 
+             
+                    <DataGrid 
                     x:Name="DocsDataGrid"
                     AutoGenerateColumns="False" 
                     IsReadOnly="True"
@@ -100,15 +92,18 @@
                     RowHeight="48"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
-                   ItemsSource="{Binding ViewModel.Docs, Mode=OneWay}"
+                   ItemsSource="{Binding ViewModel.CustomersList, Mode=OneWay}"
+                    SelectedItem="{Binding ViewModel.CustomerSelect}"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
                    Height="620"
                     >
-                
+
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60" Visibility="Hidden" />
 
-                        <DataGridTextColumn Header="标题" Binding="{Binding Filename}" MinWidth="120" >
+                        <DataGridTextColumn Header="公司名" Binding="{Binding Name}" MinWidth="120" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
@@ -116,27 +111,83 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="内容"  Binding="{Binding Content}" Width="*"  >
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                        <DataGridTextColumn Header="地区" Binding="{Binding Area}" MinWidth="120" >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
-                                    <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-                                    <Setter Property="TextWrapping" Value="NoWrap"/>
+                                    <Setter Property="FontWeight" Value="SemiBold" />
                                 </Style>
-                        </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="审核状态"  Binding="{Binding StatusName}" Width="120"  >
+                        <DataGridTextColumn Header="性质"  Binding="{Binding CoProperty}" Width="120"  >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
+                        <DataGridTextColumn Header="规模"  Binding="{Binding CoSize}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                     
+                        <DataGridTemplateColumn Header="联系方式" Width="120">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Phone}"
+                                               Foreground="Blue"
+                                               TextDecorations="Underline"
+                                               Cursor="Hand"
+                                               VerticalAlignment="Center"
+                                               MouseLeftButtonUp="PhoneTextBlock_MouseLeftButtonUp"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTextColumn Header="联系人"  Binding="{Binding Contacts}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="职位"  Binding="{Binding Contacts}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="薪资"  Binding="{Binding Salary}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="状态"  Binding="{Binding StatusName}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <!--<DataGridTextColumn Header="介绍"  Binding="{Binding Intro}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                    <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+                                    <Setter Property="TextWrapping" Value="NoWrap"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>-->
                         <DataGridTextColumn Header="上传时间" Binding="{Binding CreatedAt, StringFormat=yyyy-MM-dd HH:mm}"  MinWidth="120" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
-                                    
+
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -146,14 +197,14 @@
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
                                         <Button
-                                            Content="审核"
+                                            Content="打标记"
                                            
                                             Style="{StaticResource ButtonDashedPrimary}"
                                             hc:IconElement.Width="14"
                                             FontSize="12"
                                             Padding="8,4"
                                             Margin="0,0,8,0"
-                                            Command="{Binding ViewModel.ApproveStatusCommand, RelativeSource={RelativeSource AncestorType=local:KnowledgeBase}}"
+                                            Command="{Binding ViewModel.ApproveStatusCommand, RelativeSource={RelativeSource AncestorType=local:Customers}}"
                                             CommandParameter="{Binding  Id}"/>
                                         <Button
                                             Content="删除"
@@ -161,7 +212,7 @@
                                             hc:IconElement.Width="14"
                                             FontSize="12"
                                             Padding="8,4"
-                                            Command="{Binding ViewModel.DeleteCommand, RelativeSource={RelativeSource AncestorType=local:KnowledgeBase}}"
+                                            Command="{Binding ViewModel.DeleteCommand, RelativeSource={RelativeSource AncestorType=local:Customers}}"
                                             CommandParameter="{Binding  Id}"
                                             />
                                     </StackPanel>
@@ -169,10 +220,10 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                    
+
                     <DataGrid.RowStyle>
                         <Style TargetType="DataGridRow">
-                           
+
                             <!-- 设置间隔高度 -->
                             <Setter Property="Margin" Value="0,0,0,4"/>
 
@@ -193,10 +244,11 @@
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
-                     
+
                     </DataGrid.CellStyle>
-                 
+
                 </DataGrid>
+               
             </hc:Card>
 
             <!-- 分页 -->
