--- a/YingCaiAi/YingCaiAiWin/Views/Pages/TrainingDataPage.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/TrainingDataPage.xaml
@@ -1,6 +1,6 @@
 ﻿
 <Page
-    x:Class="YingCaiAiWin.Views.Pages.KnowledgeBase"
+    x:Class="YingCaiAiWin.Views.Pages.TrainingDataPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,8 +9,8 @@
     xmlns:hc="https://handyorg.github.io/handycontrol"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     mc:Ignorable="d"
-    Title="知识库管理"
-    d:DataContext="{d:DesignInstance local:KnowledgeBase,                     IsDesignTimeCreatable=False}"
+    Title="话术管理"
+    d:DataContext="{d:DesignInstance local:TrainingDataPage,                     IsDesignTimeCreatable=False}"
     d:DesignHeight="650"
         d:DesignWidth="1000"
     
@@ -43,7 +43,7 @@
                     Margin="0,0,12,0"
                     Width="250"
                     Height="40"
-                     Text="{Binding ViewModel.Documents.Filename }"
+                     Text="{Binding ViewModel.TrainingDataSearch.Question }"
                     />
 
                 <hc:ComboBox
@@ -52,14 +52,14 @@
                     hc:InfoElement.Placeholder="选择状态"
                     Width="170"
                     Margin="0,0,20,0"
-                    SelectedIndex="{Binding ViewModel.Documents.Status}"
+                    SelectedIndex="{Binding ViewModel.TrainingDataSearch.Status}"
                     >
                     <ComboBoxItem Content="全部" IsSelected="True" />
                     <ComboBoxItem Content="未审核" />
                     <ComboBoxItem Content="已审核" />
-                    <ComboBoxItem Content="已入库" />
+                    <ComboBoxItem Content="已训练" />
                 </hc:ComboBox>
-                
+
                 <Button 
                     Grid.Column="3" 
                     Content="搜索" 
@@ -84,7 +84,7 @@
 
             <!-- 数据表格 -->
             <hc:Card Grid.Row="2" Margin="0" Padding="0" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}" Effect="{StaticResource EffectShadow1}">
-                
+
                 <DataGrid 
                     x:Name="DocsDataGrid"
                     AutoGenerateColumns="False" 
@@ -103,12 +103,12 @@
                    ItemsSource="{Binding ViewModel.Docs, Mode=OneWay}"
                    Height="620"
                     >
-                
+
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60" Visibility="Hidden" />
 
-                        <DataGridTextColumn Header="标题" Binding="{Binding Filename}" MinWidth="120" >
+                        <DataGridTextColumn Header="问题" Binding="{Binding Question}" MinWidth="120" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
@@ -116,14 +116,14 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="内容"  Binding="{Binding Content}" Width="*"  >
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
+                        <DataGridTextColumn Header="答案"  Binding="{Binding Answer}" Width="*"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
                                     <Setter Property="TextWrapping" Value="NoWrap"/>
                                 </Style>
-                        </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
                         <DataGridTextColumn Header="审核状态"  Binding="{Binding StatusName}" Width="120"  >
                             <DataGridTextColumn.ElementStyle>
@@ -136,7 +136,7 @@
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
-                                    
+
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -153,7 +153,7 @@
                                             FontSize="12"
                                             Padding="8,4"
                                             Margin="0,0,8,0"
-                                            Command="{Binding ViewModel.ApproveStatusCommand, RelativeSource={RelativeSource AncestorType=local:KnowledgeBase}}"
+                                            Command="{Binding ViewModel.ApproveStatusCommand, RelativeSource={RelativeSource AncestorType=local:TrainingDataPage}}"
                                             CommandParameter="{Binding  Id}"/>
                                         <Button
                                             Content="删除"
@@ -161,7 +161,7 @@
                                             hc:IconElement.Width="14"
                                             FontSize="12"
                                             Padding="8,4"
-                                            Command="{Binding ViewModel.DeleteCommand, RelativeSource={RelativeSource AncestorType=local:KnowledgeBase}}"
+                                            Command="{Binding ViewModel.DeleteCommand, RelativeSource={RelativeSource AncestorType=local:TrainingDataPage}}"
                                             CommandParameter="{Binding  Id}"
                                             />
                                     </StackPanel>
@@ -169,10 +169,10 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                    
+
                     <DataGrid.RowStyle>
                         <Style TargetType="DataGridRow">
-                           
+
                             <!-- 设置间隔高度 -->
                             <Setter Property="Margin" Value="0,0,0,4"/>
 
@@ -193,9 +193,9 @@
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
-                     
+
                     </DataGrid.CellStyle>
-                 
+
                 </DataGrid>
             </hc:Card>
 
